# indddid_bano

./: .gitignore  CLAUDE.md  Makefile  Makefile.local.example  README.md
bench/: README.md
bench/v2/: .gitignore  README.md  commands.md  pyproject.toml
bench/v2/search_bench/: data.py  export_android.py  metrics.py  normalize.py  portable_sqlite.py  prebuild.py  scoring.py
bench/v2/search_bench/bench/: run.py
bench/v2/search_bench/engines/: __init__.py  _artifact.py  _sqlite_base.py  arrow_scan.py  base.py  csv_scan.py  fts5_trigram.py  fts5_unicode61.py  inverted_index.py  like_baseline.py  parquet_scan.py  trie_prefix.py  trigram_levenshtein.py
bench/v2/search_bench/queryset/: generate.py
bench/v2/shared/: queries.json
bench/v2/tests/: conftest.py  test_artifact.py  test_bench.py  test_data.py  test_engines.py  test_export_android.py  test_metrics.py  test_normalize.py  test_portable_sqlite.py  test_prebuild.py  test_queryset.py  test_save_load.py  test_scoring.py
dataprep/: pyproject.toml
dataprep/dataprep/: __init__.py  __main__.py  pipeline.py
demo/animations/: .gitignore  anim_common.py  concat_chapters.py  flat_trie.py  grab_frame.py  pyproject.toml  workflow_pipeline.py  workflow_pipeline_ch0.py  workflow_pipeline_ch1.py  workflow_pipeline_ch10.py  workflow_pipeline_ch11.py  workflow_pipeline_ch2.py  workflow_pipeline_ch3.py  workflow_pipeline_ch4.py  workflow_pipeline_ch5.py  workflow_pipeline_ch6.py  workflow_pipeline_ch7.py  workflow_pipeline_ch8.py  workflow_pipeline_ch9.py  workflow_pipeline_shared.py
demo/rust/bano-fst/: .gitignore  Cargo.toml  README.md  sample5.csv
demo/rust/bano-fst/src/: build.rs  index.rs  jni_bridge.rs  lib.rs  main.rs  normalize.rs  search.rs
(+97 files in other folders)
