[project]
name = "dataprep"
version = "0.1.0"
description = "Telecharge le BANO full et en extrait streets.csv (voie, code_postal, ville)."
requires-python = ">=3.10"
dependencies = []          # stdlib uniquement (urllib, gzip, csv)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataprep"]
